--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="theme-color" content="#000000">
-	<!--
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="theme-color" content="#000000" />
+    <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-	<link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-	<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-	<!--
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -20,21 +22,50 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-	<title>LANG Web App</title>
+    <title>LANG Web App</title>
+  </head>
 
-</head>
+  <body>
+    <noscript> You need to enable JavaScript to run this app. </noscript>
+    <h1>
+      Firebase CRUD with Javascript <br /><small><em>User App</em></small>
+    </h1>
 
-<body>
-	<noscript>
-		You need to enable JavaScript to run this app.
-	</noscript>
-	<div id="root"></div>
-<h1 id="bigOne" />
-<h2 id="object">
-</h2>
-<ul id="list"></ul>
+    <!-- add user module -->
+    <section id="add-user-module">
+      <button id="open-add-user-form-btn">+</button>
+      <form>
+        <h2>Add User</h2>
+        name:<br />
+        <input type="text" data-key="name" class="user-input" /><br />
+        age:<br />
+        <input type="text" data-key="age" class="user-input" /><br />
+        email:<br />
+        <input type="text" data-key="email" class="user-input" /><br />
+        <button type="button" id="add-user-btn">add user</button>
+      </form>
+    </section>
 
-	<!--
+    <!-- edit user module -->
+    <section id="edit-user-module">
+      <form>
+        <h2>Edit user</h2>
+        <input type="hidden" class="edit-userid" /> name:<br />
+        <input type="text" data-key="name" class="edit-user-input" /><br />
+        age:<br />
+        <input type="text" data-key="age" class="edit-user-input" /><br />
+        email:<br />
+        <input type="text" data-key="email" class="edit-user-input" /><br />
+        <button type="button" id="edit-user-btn">save</button>
+      </form>
+    </section>
+
+    <!-- show user module -->
+    <ul id="user-list"></ul>
+    <div id="user-detail"></div>
+
+    <div id="root"></div>
+    <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -44,14 +75,18 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-</body>
+  </body>
 
-<script src="https://www.gstatic.com/firebasejs/5.5.7/firebase.js">
-</script>
-<script>
- var config = { apiKey: "AIzaSyBWrDT8oD3A3OraIU6bpn8zmRq0IXXppEc", authDomain: "is5003-wave.firebaseapp.com", databaseURL:
-"https://is5003-wave.firebaseio.com", projectId: "is5003-wave", storageBucket: "is5003-wave.appspot.com", messagingSenderId:
-"299229256726" }; firebase.initializeApp(config);
-</script>
-
+  <script src="https://www.gstatic.com/firebasejs/5.5.7/firebase.js"></script>
+  <script>
+    var config = {
+      apiKey: "AIzaSyBWrDT8oD3A3OraIU6bpn8zmRq0IXXppEc",
+      authDomain: "is5003-wave.firebaseapp.com",
+      databaseURL: "https://is5003-wave.firebaseio.com",
+      projectId: "is5003-wave",
+      storageBucket: "is5003-wave.appspot.com",
+      messagingSenderId: "299229256726"
+    };
+    firebase.initializeApp(config);
+  </script>
 </html>
