--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
     <h1>
-      Firebase CRUD with Javascript <br /><small><em>User App</em></small>
+      IS5003 LANG WebApp <br /><small><em>Prototype</em></small>
     </h1>
 
     <!-- add user module -->
